Safe keeping after fixed bug with not showing showing location in text with edit post

--- a/public/assets/css/main_styles.css
+++ b/public/assets/css/main_styles.css
@@ -597,3 +597,6 @@ nav.ps-stream-status-action:hover{
 	
 
  }
+ .ps-reaction-likes{
+    width: 102.3%;
+ }
